[dataengines/sni] Reapply IconThemePath on icon theme change

SNI can have custom icon path in IconThemePath attribute.
StatusNotifierItemSource uses custom KIconLoader to add this theme dir.

KIconLoader forgets this path on any system change
(for example when icon theme is change in system settings).

Reapply custom theme path on KIconLoader::iconChanged.

BUG: 433557
FIXED-IN: 5.22.0