dataengines/statusnotifieritem/statusnotifieritemsource.cpp
@@ -264,6 +264,11 @@ void StatusNotifierItemSource::refreshCallback(QDBusPendingCallWatcher *call)
 
             // add app dir requires an app name, though this is completely unused in this context
             m_customIconLoader->addAppDir(appName.size() ? appName : QStringLiteral("unused"), path);
+
+            connect(m_customIconLoader, &KIconLoader::iconChanged, this, [=] {
+                m_customIconLoader->reconfigure(appName, QStringList(path));
+                m_customIconLoader->addAppDir(appName.size() ? appName : QStringLiteral("unused"), path);
+            });
         }
         setData(QStringLiteral("IconThemePath"), path);
 
